# backend-benchmarks

./: .gitignore  README.md  loadtest.js  makefile  pyproject.toml
binarytrees/: input_01.ts
containers/: aemmett.dockerfile  arobyn.dockerfile
databases/clickhouse/: warehouse.md  warehouse.sql
databases/postgres/: saas-company.sql
docs/: README.md
docs/clickhouse/: readme.md
ht/: server.c
reports/: 01-rps.md
reports/01-rps/: plotting.sh
src/aemmett/: __main__.py  api.py  cli.py
src/arobyn/: __main__.py  app.py  cli.py  router.py
src/emmett_app/: cli.py  rsgi.py
src/rsgi_lib/: __init__.py  rsgi.py
src/shared/: models.py  services.py
