[project]
name = "rsgi-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "TakiMoysha", email = "mpwema782@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "classes>=0.4.1",
    "emmett>=2.6.3",
    "granian[reload]>=1.7.5",
    "orjson>=3.10.15",
    "returns>=0.24.0",
    "structlog>=25.1.0",
]

[project.scripts]
dev_emmett = "emmett_app.cli:run_app"
dev_app = "app.cli:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
