[project]
name = "backend-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "TakiMoysha", email = "mpwema782@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "classes>=0.4.1",
    "emmett>=2.6.3",
    "granian[reload]>=1.7.5",
    "returns>=0.24.0",
    "robyn>=0.65.0",
    "structlog>=25.1.0",
    "orjson",
]

[project.scripts]
dev_rsgi = "aemmett.cli:run_app"
dev_rust = "arobyn.cli:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/rsgi_lib", "src/shared"]
